# ehub

./: .gitignore  .mxproject  .stm32env  CMakeLists.txt  EHUB.ioc  STM32F407VETx_APP.ld  STM32F407VETx_FLASH.ld  WiFi_Bridge_MCU_开发汇总.md  WiFi_Bridge_MCU_开发需求文档.md  debug_bp.gdb  debug_bp2.gdb  debug_bp3.gdb  debug_bp4.gdb  debug_bp5.gdb  debug_cdc.gdb  debug_inspect.gdb  debug_session.gdb  openocd.cfg  openocd_wifi_dap.cfg  startup_stm32f407xx_gcc.s  修改记录.txt
.venv310/: pyvenv.cfg
.venv310/Scripts/: activate  activate.bat  bin2hex.py  hex2bin.py  hex2dump.py  hexdiff.py  hexinfo.py  hexmerge.py
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
DAP/inc/: DAP.h  DAP_config.h
DAP/src/: DAP.c  SW_DP.c
EHUBLink/: EHUBLink.sln  ehublink.cfg  install.ps1  replace_rddi.ps1
EHUBLink/EHUBLink/: EHUBLink.vcxproj  dllmain.cpp  exports.def  pch.h  rddi_impl.cpp  tcp_transport.hpp
ESP32_wifi/: WiFi_Bridge_ESP32_开发汇总.md  WiFi_Bridge_ESP32_开发需求文档.md  platformio.ini
ESP32_wifi/data/: index.html
ESP32_wifi/include/: config.h  dap_tcp_server.h  protocol.h  tcp_server.h  uart_bridge.h  web_config.h  wifi_manager.h
ESP32_wifi/src/: dap_tcp_server.cpp  main.cpp  protocol.cpp  tcp_server.cpp  uart_bridge.cpp  web_config.cpp  wifi_manager.cpp
MDK-ARM/: EHUB.uvguix.MC  EHUB.uvguix.cm522  EHUB.uvoptx  EHUB.uvprojx  startup_stm32f407xx.lst
MDK-ARM/EHUB/: EHUB.axf  EHUB.build_log.htm  EHUB.hex  EHUB.htm  EHUB.lnp  EHUB.map  EHUB_EHUB.dep  adc.crf  adc.d  can.crf  can.d  cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  dap.crf  dap.d  dap_app.crf  dap_app.d  dap_vendor.crf  dap_vendor.d  device.crf  device.d  dma.crf  dma.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  i2c.crf  i2c.d  jtag_dp.crf  jtag_dp.d  list.crf  list.d  main.crf  (+101 more)
MDK-ARM/RTE/_EHUB/: RTE_Components.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
USB/Inc/: usbd_customhid.h
USB/Src/: usbd_customhid.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_custom_hid_if.c  usbd_desc.c
app/Inc/: battery_app.h  boot_update.h  dap_app.h  i2c_app.h  printf_app.h  usb_app.h  wifi_bridge.h  ws2812c.h
app/Src/: battery_app.c  boot_update.c  can_app.c  dap_app.c  i2c_app.c  printf_app.c  rs422_app.c  rs485_app.c  spi_app.c  usb_app.c  wifi_bridge.c  ws2812c.c
boot/Inc/: ehub_boot.h
boot/Src/: ehub_boot.c
bootloader/: README.md  STM32F407VETx_BOOT.ld
bootloader/Src/: main.c
cmake/: arm-none-eabi.cmake
old_Project/elaphurlink成功/: DAP_config.h  esp32c6_optimized.ino  main.c  usart.c
tools/: .gitignore  WiFi_Bridge_上位机_开发汇总.md  WiFi_Bridge_上位机_开发需求文档.md  _ping_test.py  _write_cfg.py  _write_cfg_5s.py  _write_prog_test.py  _write_proxy_cfg.py  bridge_test.py  bus_out.txt  ch340_listen.py  ch340_rx_test.py  dap_all_test.py  dap_exclusive_smoke_test.py  dap_info_test.py  dap_layered_test.py  dap_quick_test.py  dap_rapid_test.py  dap_seq_test.py  dap_speed_test.py  dap_tcp_diag.py  dap_tcp_direct_test.py  dap_tcp_test.py  dap_test_full.py  diag2.py  diag3.py  diag_all.py  diag_both.py  diag_bridge.py  diag_cdc.py  diag_counters.py  diag_focused.py  diag_full.py  diag_reg_tx.py  diag_simple.py  diag_test.py  diag_uart.py  diff_output.txt  ehub_debug.py  ehub_wifi_debug.py  (+62 more)
tools/elaphureLink/: elaphureLink.Wpf.exe.config  install_elaphurelink.ps1  uninstall_elaphurelink.ps1
tools/openocd/scripts/interface/: ceshi.cfg  cmsis-dap-tcp.cfg  cmsis_dap_tcp.cfg
